<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_date" />

    <TextView
        android:id="@+id/tvAverageTemperature"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_average_temperature" />

    <TextView
        android:id="@+id/tvPressure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_pressure" />

    <TextView
        android:id="@+id/tvHumidity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_humidity" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_description" />
</LinearLayout>